Configure backend and frontend for cloud deployment

--- a/smartcompare/src/main/resources/application.properties
+++ b/smartcompare/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=smartcompare
 server.port=8080
 
 # MySQL Config
-spring.datasource.url=jdbc:mysql://localhost:3306/smartcompare_db
+spring.datasource.url=mysql://root:EtyoborwTCcfDRHxQJfJGggDEKZOVWWh@mysql.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=MySQL@007
+spring.datasource.password=EtyoborwTCcfDRHxQJfJGggDEKZOVWWh
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
