--- a/smartcompare/Dockerfile
+++ b/smartcompare/Dockerfile
@@ -1,25 +1,26 @@
-# Use Java 17
-FROM eclipse-temurin:17-jdk
+# ---------- BUILD STAGE ----------
+FROM eclipse-temurin:21-jdk AS build
 
-# Set working directory
 WORKDIR /app
 
-# Copy Maven files
-COPY pom.xml .
 COPY mvnw .
 COPY .mvn .mvn
+COPY pom.xml .
+RUN chmod +x mvnw
 
-# Download dependencies
-RUN chmod +x mvnw && ./mvnw dependency:go-offline
+RUN ./mvnw dependency:go-offline
 
-# Copy source code
 COPY src src
-
-# Build the application
 RUN ./mvnw clean package -DskipTests
 
-# Expose port
+
+# ---------- RUN STAGE ----------
+FROM eclipse-temurin:21-jre
+
+WORKDIR /app
+
+COPY --from=build /app/target/*.jar app.jar
+
 EXPOSE 8080
 
-# Run the app
-CMD ["java", "-jar", "target/*.jar"]
+ENTRYPOINT ["java", "-jar", "app.jar"]
