Use env variables for DB and JWT config

--- a/smartcompare/src/main/resources/application.properties
+++ b/smartcompare/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=smartcompare
 # Server
 server.port=8080
 
-# MySQL Config
-spring.datasource.url=mysql://root:EtyoborwTCcfDRHxQJfJGggDEKZOVWWh@mysql.railway.internal:3306/railway
-spring.datasource.username=root
-spring.datasource.password=EtyoborwTCcfDRHxQJfJGggDEKZOVWWh
+# MySQL Config (ENV VARIABLES ONLY)
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
@@ -14,8 +14,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
-# # JWT (we’ll use later)
-# example of a 32+ character secret
-jwt.secret=my_super_secret_jwt_key_that_is_long_enough_123
+# JWT
+jwt.secret=${JWT_SECRET}
 jwt.expiration=3600000
 jwt.refresh-expiration=604800000
